--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
   },
   "css.customData": [
     ".vscode/tailwind.json"
-  ]
+  ],
+  "[rescript]": {
+    "editor.defaultFormatter": "chenglou92.rescript-vscode"
+  }
 }
