--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,10 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start": "deno run -A --watch=static/,routes/ dev.ts",
+    "start:fresh": "deno task start:rescript | deno run -A --watch=static/,routes/ dev.ts" ,
+    "start:rescript": "rescript -w",
+    "start:edgedb": "deno run build:edgedb -- --watch",
+    "start": "deno task start:edgedb & deno task start:rescript & deno task start:fresh",
     "build": "deno task res:build && deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update .",
@@ -12,7 +15,7 @@
     "res:build": "rescript",
     "res:clean": "rescript clean",
     "build:edgedb": "rescript-edgedb generate --output ./src/__generated__ --src ./src -I jderochervlk/mydb",
-    "watch:edgedb": "deno run build:edgedb -- --watch"
+    "watch:edgedb": ""
   },
   "lint": {
     "rules": {
