--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,17 +6,14 @@ on:
     branches: main
   workflow_dispatch:
 
-env:
-  EDGEDB_INSTANCE: ${{ secrets.EDGEDB_INSTANCE }}
-  EDGEDB_SECRET_KEY: ${{ secrets.EDGEDB_SECRET_KEY }}
-  NAMES: ${{ secrets.NAMES }}
-  PLEX_SERVER: ${{ secrets.PLEX_SERVER }}
-  PLEX_TOKEN: ${{ secrets.PLEX_TOKEN }}
-  PASSWORD: ${{ secrets.PASSWORD }}
-  TOKEN: ${{ secrets.TOKEN }}
-
-
-
+# env:
+#   EDGEDB_INSTANCE: ${{ secrets.EDGEDB_INSTANCE }}
+#   EDGEDB_SECRET_KEY: ${{ secrets.EDGEDB_SECRET_KEY }}
+#   NAMES: ${{ secrets.NAMES }}
+#   PLEX_SERVER: ${{ secrets.PLEX_SERVER }}
+#   PLEX_TOKEN: ${{ secrets.PLEX_TOKEN }}
+#   PASSWORD: ${{ secrets.PASSWORD }}
+#   TOKEN: ${{ secrets.TOKEN }}
 
 jobs:
   deploy:
