--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start:fresh": "deno task start:rescript | deno run -A --watch=static/,routes/ dev.ts" ,
+    "start:fresh": "deno run -A --watch=static/,routes/ dev.ts --unstable-kv" ,
     "start:rescript": "rescript -w",
     "start:edgedb": "deno run build:edgedb -- --watch",
     "start": "deno task start:edgedb & deno task start:rescript & deno task start:fresh",
@@ -29,21 +29,23 @@
     "**/_fresh/*"
   ],
   "imports": {
+    "@jvlk/rescript-fresh": "npm:@jvlk/rescript-fresh@^0.5.0",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "@rescript/core": "npm:@rescript/core",
+    "@rescript/std": "npm:@rescript/std@12.0.0-alpha.7",
+    "@rescript/webapi": "npm:@rescript/webapi@experimental",
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "$std/": "https://deno.land/std@0.216.0/",
+    "edgedb": "npm:edgedb@latest",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
-    "tailwindcss": "npm:tailwindcss@3.4.1",
-    "tailwindcss/": "npm:/tailwindcss@3.4.1/",
-    "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js",
-    "$std/": "https://deno.land/std@0.216.0/",
-    "rescript": "npm:rescript@next",
-    "@rescript/webapi": "npm:@rescript/webapi@experimental",
-    "@jvlk/rescript-fresh": "npm:@jvlk/rescript-fresh@^0.5.0",
     "rescript-edgedb": "npm:rescript-edgedb", 
     "rescript-embed-lang": "npm:rescript-embed-lang",
-    "@rescript/core": "npm:@rescript/core"
+    "rescript": "npm:rescript@12.0.0-alpha.7",
+    "tailwindcss": "npm:tailwindcss@3.4.1",
+    "tailwindcss/": "npm:/tailwindcss@3.4.1/",
+    "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
