--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,17 @@ jobs:
         with:
           deno-version: v2.x
 
+      # - name: Cache
+      #   uses: actions/cache@v4.2.0
+      #   with:
+      #     key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+      #     path: |
+      #       node_modules
+      #       lib
+
+      - name: Pre-build step
+        run: deno install --allow-scripts
+
       - name: Build step
         run: "deno task build"
 
