--- a/deno.json
+++ b/deno.json
@@ -13,8 +13,7 @@
     "res:dev": "rescript -w",
     "res:build": "rescript",
     "res:clean": "rescript clean",
-    "build:edgedb": "rescript-edgedb generate --output ./src/__generated__ --src ./src -I jderochervlk/mydb",
-    "watch:edgedb": ""
+    "build:edgedb": "rescript-edgedb generate --output ./src/__generated__ --src ./src -I jderochervlk/mydb"
   },
   "lint": {
     "rules": {
