--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       #       lib
 
       - name: Pre-build step
-        run: deno install --allow-scripts
+        run: deno install --allow-scripts=npm:rescript-embed-lang@0.5.5,npm:rescript@12.0.0-alpha.7
 
       - name: Build step
         run: "deno task build"
