--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,7 @@
 name: Deploy
 on:
   push:
-    branches: main
   pull_request:
-    branches: main
 
 jobs:
   deploy:
@@ -23,13 +21,13 @@ jobs:
         with:
           deno-version: v2.1.0
 
-      # - name: Cache
-      #   uses: actions/cache@v4.2.0
-      #   with:
-      #     key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
-      #     path: |
-      #       node_modules
-      #       lib
+      - name: Cache
+        uses: actions/cache@v4.2.0
+        with:
+          key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+          path: |
+            node_modules
+            lib
 
       - name: Pre-build step
         run: deno install --allow-scripts=npm:rescript-embed-lang@0.5.5,npm:rescript@12.0.0-alpha.7
