--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,7 @@
     "start:fresh": "deno run -A --watch=static/,routes/ dev.ts --unstable-kv" ,
     "start:rescript": "rescript -w",
     "start:edgedb": "deno run build:edgedb -- --watch",
-    "build": "deno task res:build && deno task build:edgedb && deno run -A dev.ts build",
+    "build": "deno task res:build && deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update .",
     "res:dev": "rescript -w",
