--- a/deno.json
+++ b/deno.json
@@ -2,9 +2,9 @@
   "lock": true,
   "tasks": {
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
-    "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
+    "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start:fresh": "deno run -A --watch=static/,routes/ dev.ts --unstable-kv" ,
+    "start:fresh": "deno run -A --watch=static/,routes/ dev.ts" ,
     "start:rescript": "rescript -w",
     "start:edgedb": "deno run build:edgedb -- --watch",
     "build": "deno task res:build && deno run -A dev.ts build",
