--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start:fresh": "deno run -A --watch=static/,routes/ dev.ts" ,
+    "start:fresh": "deno run -A --watch=static/,routes/ dev.ts",
     "start:rescript": "rescript -w",
     "start:edgedb": "deno run build:edgedb -- --watch",
     "build": "deno task res:build && deno run -A dev.ts build",
@@ -15,17 +15,7 @@
     "res:clean": "rescript clean",
     "build:edgedb": "rescript-edgedb generate --output ./src/__generated__ --src ./src -I jderochervlk/mydb"
   },
-  "lint": {
-    "rules": {
-      "tags": [
-        "fresh",
-        "recommended"
-      ]
-    }
-  },
-  "exclude": [
-    "**/_fresh/*"
-  ],
+  "lint": { "rules": { "tags": ["fresh", "recommended"] } },
   "imports": {
     "@jvlk/rescript-fresh": "npm:@jvlk/rescript-fresh@^0.5.0",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
@@ -38,23 +28,18 @@
     "edgedb": "npm:edgedb@1.3.6",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
-    "rescript-edgedb": "npm:rescript-edgedb", 
+    "rescript-edgedb": "npm:rescript-edgedb",
     "rescript-embed-lang": "npm:rescript-embed-lang",
     "rescript": "npm:rescript@12.0.0-alpha.7",
     "tailwindcss": "npm:tailwindcss@3.4.1",
     "tailwindcss/": "npm:/tailwindcss@3.4.1/",
     "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js"
   },
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
-  },
+  "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "nodeModulesDir": "auto",
   "deploy": {
     "project": "88392f6c-905b-4d2d-9bf8-2f0ced554bfd",
-    "exclude": [
-      "**/node_modules"
-    ],
+    "exclude": ["**/node_modules"],
     "include": [],
     "entrypoint": "main.ts"
   }
