--- a/deno.json
+++ b/deno.json
@@ -39,7 +39,7 @@
   "nodeModulesDir": "auto",
   "deploy": {
     "project": "88392f6c-905b-4d2d-9bf8-2f0ced554bfd",
-    "exclude": ["**/node_modules"],
+    "exclude": ["node_modules"],
     "include": [],
     "entrypoint": "main.ts"
   }
