--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
     "start:fresh": "deno run -A --watch=static/,routes/ dev.ts",
     "start:rescript": "rescript -w",
     "start:edgedb": "deno run build:edgedb -- --watch",
+    "prepare": "deno install --allow-scripts && deno task build:rescript",
     "build": "deno task res:build && deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update .",
