--- a/deno.json
+++ b/deno.json
@@ -40,9 +40,6 @@
   "nodeModulesDir": "auto",
   "deploy": {
     "project": "88392f6c-905b-4d2d-9bf8-2f0ced554bfd",
-    "exclude": ["node_modules"],
-    "include": [],
-    "entrypoint": "main.ts",
-    "root": "."
+    "entrypoint": "main.ts"
   }
 }
