--- a/deno.json
+++ b/deno.json
@@ -7,8 +7,8 @@
     "start:fresh": "deno run -A --watch=static/,routes/ dev.ts",
     "start:rescript": "rescript -w",
     "start:edgedb": "deno run build:edgedb -- --watch",
-    "prepare": "deno install --allow-scripts && deno task res:build && npx rolldown routes/_app.mjs -o routes/_app.js -e preact",
-    "build": "deno task res:build && deno run -A dev.ts build",
+    "prepare": "deno install --allow-scripts && deno task res:build && npx rolldown routes/_app.mjs -o routes/_app.js -e preact && rm routes/_app.mjs",
+    "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update .",
     "res:dev": "rescript -w",
