--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,14 @@ jobs:
         with:
           deno-version: v2.x
 
+      - uses: actions/cache@v4
+        id: node-cache
+        with:
+          path: |
+            - node_modules
+            - lib
+          key: ${{ runner.os }}-${{ hashFiles('**/deno.lock') }}
+
       - name: Install step
         run: "deno task prepare"
 
