--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
     "start:fresh": "deno run -A --watch=static/,routes/ dev.ts",
     "start:rescript": "rescript -w",
     "start:edgedb": "deno run build:edgedb -- --watch",
+    "css": "./tailwindcss -i ./static/tailwind.css -o ./static/styles.css --minify",
     "prepare": "deno install --allow-scripts && deno task res:build",
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
@@ -29,7 +30,7 @@
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@rescript/core": "npm:@rescript/core",
-    "@rescript/std": "npm:@rescript/std@12.0.0-alpha.7",
+    "@rescript/std": "npm:@rescript/std@12.0.0-alpha.9",
     "@rescript/webapi": "npm:@rescript/webapi@experimental",
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "$std/": "https://deno.land/std@0.216.0/",
@@ -38,10 +39,7 @@
     "preact/": "https://esm.sh/preact@10.22.0/",
     "rescript-edgedb": "npm:rescript-edgedb",
     "rescript-embed-lang": "npm:rescript-embed-lang",
-    "rescript": "npm:rescript@12.0.0-alpha.7",
-    "tailwindcss": "npm:tailwindcss@3.4.1",
-    "tailwindcss/": "npm:/tailwindcss@3.4.1/",
-    "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js"
+    "rescript": "npm:rescript@12.0.0-alpha.9"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
