--- a/deno.json
+++ b/deno.json
@@ -30,16 +30,17 @@
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@rescript/core": "npm:@rescript/core",
-    "@rescript/std": "npm:@rescript/std@12.0.0-alpha.9",
+    "@rescript/std": "npm:@rescript/std@12.0.0-alpha.7",
     "@rescript/webapi": "npm:@rescript/webapi@experimental",
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "$std/": "https://deno.land/std@0.216.0/",
+    "daisyui": "npm:daisyui@^5.0.9",
     "edgedb": "npm:edgedb@1.3.6",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
     "rescript-edgedb": "npm:rescript-edgedb",
     "rescript-embed-lang": "npm:rescript-embed-lang",
-    "rescript": "npm:rescript@12.0.0-alpha.9"
+    "rescript": "npm:rescript@12.0.0-alpha.7"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
