--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,7 @@
     "start:fresh": "deno run -A --watch=static/,routes/ dev.ts",
     "start:rescript": "rescript -w",
     "start:edgedb": "deno run build:edgedb -- --watch",
-    "css": "./tailwindcss -i ./static/tailwind.css -o ./static/styles.css --minify",
+    "css": "./tailwindcss -i ./static/tailwind.css -o ./static/styles.css",
     "prepare": "deno install --allow-scripts && deno task res:build",
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
