--- a/deno.json
+++ b/deno.json
@@ -4,13 +4,13 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start:fresh": "deno run -A --watch=static/,routes/ dev.ts",
+    "start:fresh": "deno run -A --unstable-kv --watch=static/,routes/ dev.ts --unstable-kv",
     "start:rescript": "rescript -w",
     "start:edgedb": "deno run build:edgedb -- --watch",
     "css": "./tailwindcss -i ./static/tailwind.css -o ./static/styles.css",
     "prepare": "deno install --allow-scripts && deno task res:build",
-    "build": "deno run -A dev.ts build",
-    "preview": "deno run -A main.ts",
+    "build": "deno run -A --unstable-kv dev.ts build",
+    "preview": "deno run -A --unstable-kv main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update .",
     "res:dev": "rescript -w",
     "res:build": "rescript",
