--- a/deno.json
+++ b/deno.json
@@ -30,7 +30,7 @@
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@rescript/core": "npm:@rescript/core",
     "@rescript/std": "npm:@rescript/std@12.0.0-alpha.7",
-    "@rescript/webapi": "npm:@rescript/webapi@experimental",
+    "@rescript/webapi": "npm:@rescript/webapi@0.1.0-experimental-fe47fc9",
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "$std/": "https://deno.land/std@0.216.0/",
     "@tailwindcss/typography": "npm:@tailwindcss/typography@^0.5.16",
