--- a/deno.json
+++ b/deno.json
@@ -28,7 +28,6 @@
   "imports": {
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
-    "@rescript/core": "npm:@rescript/core",
     "@rescript/std": "npm:@rescript/std@12.0.0-alpha.7",
     "@rescript/webapi": "npm:@rescript/webapi@0.1.0-experimental-fe47fc9",
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
@@ -38,8 +37,6 @@
     "edgedb": "npm:edgedb@1.3.6",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
-    "rescript-edgedb": "npm:rescript-edgedb",
-    "rescript-embed-lang": "npm:rescript-embed-lang",
     "rescript": "npm:rescript@12.0.0-alpha.7"
   },
   "compilerOptions": {
@@ -54,8 +51,7 @@
       "node_modules",
       "lib",
       "**/*.res",
-      "**/*.resi",
-      "dbschema"
+      "**/*.resi"
     ]
   }
 }
