--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,6 @@
     "manifest": "deno task cli manifest $(pwd)",
     "start:fresh": "deno run -A --unstable-kv --watch=static/,routes/ dev.ts --unstable-kv",
     "start:rescript": "rescript -w",
-    "start:edgedb": "deno run build:edgedb -- --watch",
     "css": "./tailwindcss -i ./static/tailwind.css -o ./static/styles.css",
     "prepare": "deno install --allow-scripts && deno task res:build",
     "build": "deno run -A --unstable-kv dev.ts build",
@@ -14,8 +13,7 @@
     "update": "deno run -A -r https://fresh.deno.dev/update .",
     "res:dev": "rescript -w",
     "res:build": "rescript",
-    "res:clean": "rescript clean",
-    "build:edgedb": "rescript-edgedb generate --output ./src/__generated__ --src ./src -I jderochervlk/mydb"
+    "res:clean": "rescript clean"
   },
   "lint": {
     "rules": {
@@ -34,7 +32,6 @@
     "$std/": "https://deno.land/std@0.216.0/",
     "@tailwindcss/typography": "npm:@tailwindcss/typography@^0.5.16",
     "daisyui": "npm:daisyui@^5.0.9",
-    "edgedb": "npm:edgedb@1.3.6",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
     "rescript": "npm:rescript@12.0.0-alpha.7"
