--- a/deno.json
+++ b/deno.json
@@ -4,18 +4,16 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start:fresh": "deno run -A --watch=static/,routes/ dev.ts",
+    "start:fresh": "deno run -A --unstable-kv --watch=static/,routes/ dev.ts --unstable-kv",
     "start:rescript": "rescript -w",
-    "start:edgedb": "deno run build:edgedb -- --watch",
     "css": "./tailwindcss -i ./static/tailwind.css -o ./static/styles.css",
     "prepare": "deno install --allow-scripts && deno task res:build",
-    "build": "deno run -A dev.ts build",
-    "preview": "deno run -A main.ts",
+    "build": "deno run -A --unstable-kv dev.ts build",
+    "preview": "deno run -A --unstable-kv main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update .",
     "res:dev": "rescript -w",
     "res:build": "rescript",
-    "res:clean": "rescript clean",
-    "build:edgedb": "rescript-edgedb generate --output ./src/__generated__ --src ./src -I jderochervlk/mydb"
+    "res:clean": "rescript clean"
   },
   "lint": {
     "rules": {
@@ -28,18 +26,14 @@
   "imports": {
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
-    "@rescript/core": "npm:@rescript/core",
     "@rescript/std": "npm:@rescript/std@12.0.0-alpha.7",
-    "@rescript/webapi": "npm:@rescript/webapi@experimental",
+    "@rescript/webapi": "npm:@rescript/webapi@0.1.0-experimental-fe47fc9",
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "$std/": "https://deno.land/std@0.216.0/",
     "@tailwindcss/typography": "npm:@tailwindcss/typography@^0.5.16",
     "daisyui": "npm:daisyui@^5.0.9",
-    "edgedb": "npm:edgedb@1.3.6",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
-    "rescript-edgedb": "npm:rescript-edgedb",
-    "rescript-embed-lang": "npm:rescript-embed-lang",
     "rescript": "npm:rescript@12.0.0-alpha.7"
   },
   "compilerOptions": {
@@ -54,8 +48,7 @@
       "node_modules",
       "lib",
       "**/*.res",
-      "**/*.resi",
-      "dbschema"
+      "**/*.resi"
     ]
   }
 }
