--- a/package.json
+++ b/package.json
@@ -1,3 +1,9 @@
 {
-  "name": "plex-movie-night"
+  "name": "plex-movie-night",
+  "dependencies": {
+    "@rescript/std": "12.0.0-beta.4",
+    "@rescript/webapi": "0.1.0-experimental-fe47fc9",
+    "rescript": "12.0.0-beta.4",
+    "@tailwindcss/typography": "0.5.16"
+  }
 }
