--- a/deno.json
+++ b/deno.json
@@ -26,11 +26,16 @@
   "imports": {
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "@rescript/linux-x64": "npm:@rescript/linux-x64@12.0.0-beta.3",
+    "@rescript/std": "npm:@rescript/std@12.0.0-beta.3",
+    "@rescript/webapi": "npm:@rescript/webapi@0.1.0-experimental-fe47fc9",
+    "@tailwindcss/typography": "npm:@tailwindcss/typography@^0.5.16",
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "$std/": "https://deno.land/std@0.216.0/",
     "daisyui": "npm:daisyui@^5.0.9",
     "preact": "https://esm.sh/preact@10.22.0",
-    "preact/": "https://esm.sh/preact@10.22.0/"
+    "preact/": "https://esm.sh/preact@10.22.0/",
+    "rescript": "npm:rescript@12.0.0-beta.3"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
