--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start:fresh": "deno run -A --unstable-kv --watch=static/,routes/ dev.ts --unstable-kv",
+    "start:fresh": "deno run -A --unstable-kv --watch=static/,routes/ dev.ts",
     "start:rescript": "rescript -w",
     "css": "./tailwindcss -i ./static/tailwind.css -o ./static/styles.css",
     "prepare": "deno install --allow-scripts && deno task res:build",
