--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start:fresh": "deno run -A --unstable-kv --watch=static/,routes/ dev.ts --unstable-kv",
+    "start:fresh": "deno run -A --unstable-kv --watch=static/,routes/ dev.ts",
     "start:rescript": "rescript -w",
     "css": "./tailwindcss -i ./static/tailwind.css -o ./static/styles.css",
     "prepare": "deno install --allow-scripts && deno task res:build",
@@ -31,6 +31,7 @@
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "$std/": "https://deno.land/std@0.216.0/",
     "@tailwindcss/typography": "npm:@tailwindcss/typography@^0.5.16",
+    "@types/node": "npm:@types/node@^24.2.0",
     "daisyui": "npm:daisyui@^5.0.9",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
