--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,8 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start-fresh": "deno run -A --unstable-kv --watch=static/,routes/ dev.ts",
-    "start-rescript": "rescript -w",
+    "start:fresh": "deno run -A --unstable-kv --no-clear-screen --watch=static/,routes/ dev.ts",
+    "start:rescript": "rescript -w",
     "prepare": "deno install --allow-scripts && deno task res:build",
     "build": "deno run -A --unstable-kv dev.ts build",
     "preview": "deno run -A --unstable-kv main.ts",
