--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    environment: ${{ github.event_name == 'pull_request' && 'Preview' || (github.ref == 'refs/heads/main' && 'Production' || 'Preview') }}
 
     permissions:
       id-token: write # Needed for auth with Deno Deploy
